[project]
name = "cloudjack"
version = "0.4.1"
description = "A unified multi-cloud SDK for AWS and GCP services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.12.5",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.42.49",
]
aws-stubs = [
    "cloudjack[aws]",
    "boto3-stubs>=1.42.49",
]
gcp = [
    "google-cloud-compute>=1.43.0",
    "google-cloud-dns>=0.36.0",
    "google-cloud-iam>=2.21.0",
    "google-cloud-logging>=3.13.0",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-resource-manager>=1.16.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
]
all = [
    "cloudjack[aws,gcp]",
]
all-stubs = [
    "cloudjack[aws-stubs,gcp]",
]

[project.scripts]
cloudjack = "cloudjack.cli:main"

[dependency-groups]
dev = [
    "boto3>=1.42.49",
    "google-cloud-compute>=1.43.0",
    "google-cloud-dns>=0.36.0",
    "google-cloud-iam>=2.21.0",
    "google-cloud-logging>=3.13.0",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-resource-manager>=1.16.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
    "boto3-stubs>=1.42.49",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Keep visibility into our own untyped imports; silence only third-party
# libraries that genuinely lack stubs so `mypy cloudjack/` stays meaningful.
[[tool.mypy.overrides]]
module = [
    "google.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["cloudjack"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudjack"]

[tool.hatch.build.targets.wheel.force-include]
"cloudjack/py.typed" = "cloudjack/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "cloudjack",
    "cloudjack/py.typed",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
